# lending_intelligence_platform

./: .coverage  .gitignore  .vercelignore  README.md  pyproject.toml
agents/: loan_advisor_graph.py
backend/: .env.example  .vercelignore  requirements-dev.txt  requirements.txt  vercel.json
backend/api/: index.py  requirements.txt
backend/app/: main.py  ml_registry.py
backend/ml_models/: income_model.joblib  intent_model.joblib  model_registry.json  risk_model.joblib
backend/scripts/: seed.py
backend/tests/: conftest.py  test_aa_parser.py  test_api.py  test_explainability.py  test_feature_engineering.py  test_firestore_codec.py  test_income_engine.py  test_intent_engine.py  test_lead_scoring.py  test_llm_advisor.py  test_pipeline.py  test_recommendation_engine.py  test_repayment_engine.py  test_risk_engine.py
data/samples/: labels.json  sample_aa_payload.json
database/: FIRESTORE_SCHEMA.md  schema.sql
deployment/: deploy.sh  render.yaml  vercel.json
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: charts.tsx  firebase-analytics.tsx  ui.tsx
ml/: data_generator.py  drift_detection.py  train.py
pitch-deck/: slide10_shots.xml  slide11_perf.xml  slide14_summary.xml  slide5_diagram.xml  slide6_shots.xml  slide7_arch.xml  slide7_arch_v2.xml  slide8_tech.xml  slide9_cost.xml
(+48 files in other folders)
